Bug 1317389: Change property attributes for generator and async functions to match ES2015/2017. r=Waldo